validator_derive_tests/tests/compile-fail/range/no_args.stderr
error: Invalid attribute #[validate] on field `s`: Validator `range` requires at least 1 argument out of `min`, `max`, `exc_min` and `exc_max`
 --> $DIR/no_args.rs:5:5
  |
5 |     #[validate(range())]
  |     ^
